content highlights link alignment issue

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -446,6 +446,27 @@ ul {
         }
     }
 }
+.company_highlights_new {
+    .teaser{
+        .bottom-aligned-text{
+            .right-image-position, .bottom-aligned-text{
+                .left-image-position{
+                    height: 100%;
+                    display: flex !important;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+                .text-section{         
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                }
+            }
+        }
+    }
+}    
 .company-highlight-blue-grey-background {
     background: linear-gradient(to bottom, $medium-blue-color, $medium-blue-color 50%, $light-grey-20 50% );
 }
@@ -469,10 +490,10 @@ ul {
         border-bottom: 1px solid $light-grey-separator-color;
     }
     .image-text-wrapper {
-        padding: 40px 15px 12px 15px;
+        padding: 40px 15px 30px 15px;
         text-align: center;
         background-color: $white-shade;
-        height: 95%;
+        height: 100%;
         img {
             width: 150px !important;
             height: 150px;
